set up base.html

--- a/giveaway/templates/giveaway/category_list.html
+++ b/giveaway/templates/giveaway/category_list.html
@@ -1,7 +1,12 @@
-{% for category in parent_categories %}
-  <div id="category-list">
-    <div id="category-listing">
-      <a href="{% url 'giveaway_list' pk=category.pk %}">  {{ category.name }} </a>
+{% extends 'giveaway/base.html' %}
+{% block title %}Categories{% endblock %}
+
+{% block body %}
+  {% for category in parent_categories %}
+    <div id="category-list">
+      <div id="category-listing">
+        <a href="{% url 'giveaway_list' pk=category.pk %}">  {{ category.name }} </a>
+      </div>
     </div>
-  </div>
-{% endfor %}
+  {% endfor %}
+{% endblock %}
