--- a/giveaway/templates/giveaway/enter_giveaway.html
+++ b/giveaway/templates/giveaway/enter_giveaway.html
@@ -1,7 +1,12 @@
-<div>
-  {% if entry.winner %}
-    Congrats you win
-  {% else %}
-    Sorry you did not win
-  {% endif %}
-</div>
+{% extends 'giveaway/base.html' %}
+{% block title %}Results{% endblock %}
+
+{% block body %}
+  <div>
+    {% if entry.winner %}
+      Congrats you win
+    {% else %}
+      Sorry you did not win
+    {% endif %}
+  </div>
+{% endblock %}
