--- a/giveaway/templates/giveaway/category_list.html
+++ b/giveaway/templates/giveaway/category_list.html
@@ -2,6 +2,7 @@
 {% block title %}Categories{% endblock %}
 
 {% block body %}
+  <h1>Categories</h1>
   {% for category in parent_categories %}
     <div id="category-list">
       <div id="category-listing">
