--- a/giveaway/templates/giveaway/giveaway_list.html
+++ b/giveaway/templates/giveaway/giveaway_list.html
@@ -12,7 +12,7 @@
   </div>
   <div class="row">
     {% for giveaway in active_giveaways %}
-      <div class="col-xs-3 prize-listing">
+      <div class="col-md-3 col-xs-6 prize-listing">
         <a href="{% url 'giveaway' pk=giveaway.pk %}">
           <div class="giveaway-name">{{ giveaway.name }}</div>
           <img class="prize-picture" src="{{ giveaway.prize.image.url }}" />
