--- a/giveaway/templates/giveaway/base.html
+++ b/giveaway/templates/giveaway/base.html
@@ -9,13 +9,10 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="/">WebSiteName</a>
+        <a class="navbar-brand" href="/">Video Game Giveaway</a>
       </div>
       <ul class="nav navbar-nav">
-        <li><a href="/">Categories</a></li>
-        <li><a href="#">Page 1</a></li>
-        <li><a href="#">Page 2</a></li>
-        <li><a href="#">Page 3</a></li>
+        <li><a href="/">Platforms</a></li>
       </ul>
     </div>
   </nav>
